--- a/src/main/resources/pl/majkus522/rammachine/gui/gui-view.fxml
+++ b/src/main/resources/pl/majkus522/rammachine/gui/gui-view.fxml
@@ -17,70 +17,71 @@
 	<children>
 		<GridPane VBox.vgrow="ALWAYS">
 			<columnConstraints>
-				<ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" percentWidth="20.0" />
+				<ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
+				<ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" percentWidth="20.0"/>
 			</columnConstraints>
 			<rowConstraints>
-				<RowConstraints minHeight="0.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-				<RowConstraints vgrow="ALWAYS" />
-				<RowConstraints vgrow="NEVER" />
+				<RowConstraints minHeight="0.0" vgrow="SOMETIMES"/>
+				<RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+				<RowConstraints vgrow="ALWAYS"/>
+				<RowConstraints vgrow="NEVER"/>
 			</rowConstraints>
 			<children>
 				<FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="10.0" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
 					<children>
-						<Button mnemonicParsing="false" onAction="#onPlayButton" text="Play" />
-						<Button mnemonicParsing="false" onAction="#onStepButton" text="Step" />
-						<Button mnemonicParsing="false" onAction="#onStopButton" text="Stop" />
+						<Button mnemonicParsing="false" onAction="#onPlayButton" text="Play"/>
+						<Button mnemonicParsing="false" onAction="#onStepButton" text="Step"/>
+						<Button mnemonicParsing="false" onAction="#onStopButton" text="Stop"/>
 					</children>
 					<padding>
-						<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+						<Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
 					</padding>
 				</FlowPane>
 				<GridPane GridPane.rowIndex="1">
 					<columnConstraints>
-						<ColumnConstraints />
-						<ColumnConstraints halignment="LEFT" hgrow="NEVER" />
-						<ColumnConstraints halignment="LEFT" hgrow="NEVER" />
-						<ColumnConstraints halignment="LEFT" hgrow="NEVER" />
+						<ColumnConstraints/>
+						<ColumnConstraints halignment="LEFT" hgrow="NEVER"/>
+						<ColumnConstraints halignment="LEFT" hgrow="NEVER"/>
+						<ColumnConstraints halignment="LEFT" hgrow="NEVER"/>
 					</columnConstraints>
 					<rowConstraints>
-						<RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+						<RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
 					</rowConstraints>
 					<children>
 						<ScrollPane fitToHeight="true" fitToWidth="true" nodeOrientation="LEFT_TO_RIGHT" style="-fx-background-color: transparent;" vbarPolicy="NEVER" GridPane.vgrow="SOMETIMES">
 							<content>
 								<FlowPane fx:id="inputTape" alignment="CENTER_LEFT" columnHalignment="CENTER" orientation="VERTICAL" prefWrapLength="0.0" style="-fx-background-color: transparent;" GridPane.hgrow="NEVER" GridPane.vgrow="NEVER">
 									<children>
-										<IntField nodeOrientation="LEFT_TO_RIGHT" prefWidth="60.0" />
+										<IntField nodeOrientation="LEFT_TO_RIGHT" prefWidth="60.0"/>
 									</children>
 								</FlowPane>
 							</content>
 						</ScrollPane>
 						<Button mnemonicParsing="false" onAction="#onAddInput" text="+" textAlignment="CENTER" GridPane.columnIndex="1">
 							<GridPane.margin>
-								<Insets bottom="10.0" left="10.0" top="10.0" />
-							</GridPane.margin></Button>
+								<Insets bottom="10.0" left="10.0" top="10.0"/>
+							</GridPane.margin>
+						</Button>
 						<Button mnemonicParsing="false" onAction="#onRemoveInput" text="-" textAlignment="CENTER" GridPane.columnIndex="3">
 							<GridPane.margin>
-								<Insets bottom="10.0" right="10.0" top="10.0" />
-							</GridPane.margin></Button>
-						<IntField maxWidth="40.0" nodeOrientation="LEFT_TO_RIGHT" prefWidth="40.0" GridPane.columnIndex="2" />
+								<Insets bottom="10.0" right="10.0" top="10.0"/>
+							</GridPane.margin>
+						</Button>
+						<IntField maxWidth="40.0" nodeOrientation="LEFT_TO_RIGHT" prefWidth="40.0" GridPane.columnIndex="2"/>
 					</children>
 				</GridPane>
 				<GridPane GridPane.rowIndex="3">
 					<columnConstraints>
-						<ColumnConstraints />
+						<ColumnConstraints/>
 					</columnConstraints>
 					<rowConstraints>
-						<RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+						<RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
 					</rowConstraints>
 					<children>
 						<ScrollPane fitToHeight="true" fitToWidth="true" nodeOrientation="LEFT_TO_RIGHT" vbarPolicy="NEVER" GridPane.vgrow="SOMETIMES">
 							<content>
 								<FlowPane fx:id="outputTape" alignment="CENTER_LEFT" columnHalignment="CENTER" orientation="VERTICAL" prefWrapLength="0.0" GridPane.hgrow="NEVER" GridPane.vgrow="NEVER">
-									<children>
-									</children>
+									<children></children>
 								</FlowPane>
 							</content>
 						</ScrollPane>
@@ -88,10 +89,10 @@
 				</GridPane>
 				<GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
 					<columnConstraints>
-						<ColumnConstraints hgrow="ALWAYS" />
+						<ColumnConstraints hgrow="ALWAYS"/>
 					</columnConstraints>
 					<rowConstraints>
-						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
 					</rowConstraints>
 					<children>
 						<ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" nodeOrientation="LEFT_TO_RIGHT" GridPane.halignment="RIGHT" GridPane.hgrow="SOMETIMES" GridPane.vgrow="ALWAYS">
@@ -100,21 +101,21 @@
 									<children>
 										<HBox alignment="CENTER" spacing="10.0" VBox.vgrow="NEVER">
 											<children>
-												<Label alignment="CENTER" text="Rejestr 0" textAlignment="CENTER" HBox.hgrow="ALWAYS" />
+												<Label alignment="CENTER" text="Rejestr 0" textAlignment="CENTER" HBox.hgrow="ALWAYS"/>
 												<IntField prefWidth="60.0" editable="false"/>
 											</children>
 											<padding>
-												<Insets bottom="2.0" left="5.0" right="5.0" top="2.0" />
+												<Insets bottom="2.0" left="5.0" right="5.0" top="2.0"/>
 											</padding>
 										</HBox>
 									</children>
 									<padding>
-										<Insets right="12.0" />
+										<Insets right="12.0"/>
 									</padding>
 								</VBox>
 							</content>
 							<padding>
-								<Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+								<Insets bottom="8.0" left="8.0" right="8.0" top="8.0"/>
 							</padding>
 						</ScrollPane>
 					</children>
