--- a/src/main/resources/pl/majkus522/rammachine/gui/gui-view.fxml
+++ b/src/main/resources/pl/majkus522/rammachine/gui/gui-view.fxml
@@ -42,7 +42,6 @@
 						<ColumnConstraints/>
 						<ColumnConstraints halignment="LEFT" hgrow="NEVER"/>
 						<ColumnConstraints halignment="LEFT" hgrow="NEVER"/>
-						<ColumnConstraints halignment="LEFT" hgrow="NEVER"/>
 					</columnConstraints>
 					<rowConstraints>
 						<RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
@@ -52,7 +51,7 @@
 							<content>
 								<FlowPane fx:id="inputTape" alignment="CENTER_LEFT" columnHalignment="CENTER" orientation="VERTICAL" prefWrapLength="0.0" style="-fx-background-color: transparent;" GridPane.hgrow="NEVER" GridPane.vgrow="NEVER">
 									<children>
-										<IntField nodeOrientation="LEFT_TO_RIGHT" prefWidth="60.0"/>
+										<IntField nodeOrientation="LEFT_TO_RIGHT" prefWidth="60.0" value="0"/>
 									</children>
 								</FlowPane>
 							</content>
@@ -67,7 +66,6 @@
 								<Insets bottom="10.0" right="10.0" top="10.0"/>
 							</GridPane.margin>
 						</Button>
-						<IntField maxWidth="40.0" nodeOrientation="LEFT_TO_RIGHT" prefWidth="40.0" GridPane.columnIndex="2"/>
 					</children>
 				</GridPane>
 				<GridPane GridPane.rowIndex="3">
