--- a/src/main/resources/pl/majkus522/rammachine/gui/gui-view.fxml
+++ b/src/main/resources/pl/majkus522/rammachine/gui/gui-view.fxml
@@ -6,117 +6,92 @@
 <?import pl.majkus522.rammachine.gui.IntField?>
 
 <VBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER" minHeight="720.0" minWidth="1280.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="pl.majkus522.rammachine.gui.GuiController">
-	<children>
-		<GridPane VBox.vgrow="ALWAYS">
+	<GridPane VBox.vgrow="ALWAYS">
+		<columnConstraints>
+			<ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
+			<ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" percentWidth="20.0"/>
+		</columnConstraints>
+		<rowConstraints>
+			<RowConstraints minHeight="0.0" vgrow="SOMETIMES"/>
+			<RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+			<RowConstraints vgrow="ALWAYS"/>
+			<RowConstraints vgrow="NEVER"/>
+		</rowConstraints>
+		<FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="10.0" styleClass="pane" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
+			<padding>
+				<Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+			</padding>
+			<GridPane.margin>
+				<Insets bottom="10.0"/>
+			</GridPane.margin>
+			<Button mnemonicParsing="false" onAction="#onPlayButton" text="Play"/>
+			<Button mnemonicParsing="false" onAction="#onStepButton" text="Step"/>
+			<Button mnemonicParsing="false" onAction="#onStopButton" text="Stop" disable="true" fx:id="stopButton"/>
+		</FlowPane>
+		<GridPane styleClass="pane" GridPane.rowIndex="1">
 			<columnConstraints>
-				<ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
-				<ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" percentWidth="20.0"/>
+				<ColumnConstraints/>
+				<ColumnConstraints halignment="LEFT" hgrow="NEVER"/>
+				<ColumnConstraints halignment="LEFT" hgrow="NEVER"/>
+				<ColumnConstraints/>
 			</columnConstraints>
 			<rowConstraints>
-				<RowConstraints minHeight="0.0" vgrow="SOMETIMES"/>
 				<RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-				<RowConstraints vgrow="ALWAYS"/>
-				<RowConstraints vgrow="NEVER"/>
 			</rowConstraints>
-			<children>
-				<FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="10.0" styleClass="pane" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
-					<children>
-						<Button mnemonicParsing="false" onAction="#onPlayButton" text="Play"/>
-						<Button mnemonicParsing="false" onAction="#onStepButton" text="Step"/>
-						<Button mnemonicParsing="false" onAction="#onStopButton" text="Stop" disable="true" fx:id="stopButton"/>
-					</children>
-					<padding>
-						<Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-					</padding>
-					<GridPane.margin>
-						<Insets bottom="10.0"/>
-					</GridPane.margin>
+			<ScrollPane fitToHeight="true" fitToWidth="true" nodeOrientation="LEFT_TO_RIGHT" style="-fx-background-color: transparent;" vbarPolicy="NEVER" GridPane.vgrow="SOMETIMES">
+				<FlowPane fx:id="inputTape" alignment="CENTER_LEFT" columnHalignment="CENTER" orientation="VERTICAL" prefWrapLength="0.0" style="-fx-background-color: transparent;" GridPane.hgrow="NEVER" GridPane.vgrow="NEVER">
+					<IntField nodeOrientation="LEFT_TO_RIGHT" prefWidth="60.0"/>
 				</FlowPane>
-				<GridPane styleClass="pane" GridPane.rowIndex="1">
-					<columnConstraints>
-						<ColumnConstraints/>
-						<ColumnConstraints halignment="LEFT" hgrow="NEVER"/>
-						<ColumnConstraints halignment="LEFT" hgrow="NEVER"/>
-						<ColumnConstraints/>
-					</columnConstraints>
-					<rowConstraints>
-						<RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-					</rowConstraints>
-					<children>
-						<ScrollPane fitToHeight="true" fitToWidth="true" nodeOrientation="LEFT_TO_RIGHT" style="-fx-background-color: transparent;" vbarPolicy="NEVER" GridPane.vgrow="SOMETIMES">
-							<content>
-								<FlowPane fx:id="inputTape" alignment="CENTER_LEFT" columnHalignment="CENTER" orientation="VERTICAL" prefWrapLength="0.0" style="-fx-background-color: transparent;" GridPane.hgrow="NEVER" GridPane.vgrow="NEVER">
-									<children>
-										<IntField nodeOrientation="LEFT_TO_RIGHT" prefWidth="60.0"/>
-									</children>
-								</FlowPane>
-							</content>
-						</ScrollPane>
-						<Button mnemonicParsing="false" onAction="#onAddInput" text="+" textAlignment="CENTER" GridPane.columnIndex="1">
-							<GridPane.margin>
-								<Insets bottom="10.0" left="10.0" top="10.0"/>
-							</GridPane.margin>
-						</Button>
-						<Button mnemonicParsing="false" onAction="#onRemoveInput" text="-" textAlignment="CENTER" GridPane.columnIndex="3">
-							<GridPane.margin>
-								<Insets bottom="10.0" right="10.0" top="10.0"/>
-							</GridPane.margin>
-						</Button>
-					</children>
-				</GridPane>
-				<GridPane styleClass="pane" GridPane.rowIndex="3">
-					<columnConstraints>
-						<ColumnConstraints/>
-					</columnConstraints>
-					<rowConstraints>
-						<RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-					</rowConstraints>
-					<children>
-						<ScrollPane fitToHeight="true" fitToWidth="true" nodeOrientation="LEFT_TO_RIGHT" vbarPolicy="NEVER" GridPane.vgrow="SOMETIMES">
-							<content>
-								<FlowPane fx:id="outputTape" alignment="CENTER_LEFT" columnHalignment="CENTER" orientation="VERTICAL" prefWrapLength="0.0" GridPane.hgrow="NEVER" GridPane.vgrow="NEVER">
-									<children></children>
-								</FlowPane>
-							</content>
-						</ScrollPane>
-					</children>
-				</GridPane>
-				<GridPane GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="3">
-					<columnConstraints>
-						<ColumnConstraints hgrow="ALWAYS"/>
-					</columnConstraints>
-					<rowConstraints>
-						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-					</rowConstraints>
-					<children>
-						<ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" nodeOrientation="LEFT_TO_RIGHT" GridPane.halignment="RIGHT" GridPane.hgrow="SOMETIMES" GridPane.vgrow="ALWAYS">
-							<content>
-								<VBox fx:id="registries" alignment="TOP_RIGHT" styleClass="pane">
-									<children>
-										<HBox alignment="CENTER" spacing="10.0" VBox.vgrow="NEVER">
-											<children></children>
-											<padding>
-												<Insets bottom="2.0" left="5.0" right="5.0" top="2.0"/>
-											</padding>
-										</HBox>
-									</children>
-									<padding>
-										<Insets right="12.0"/>
-									</padding>
-								</VBox>
-							</content>
-							<padding>
-								<Insets bottom="8.0" left="8.0" right="8.0" top="8.0"/>
-							</padding>
-						</ScrollPane>
-					</children>
-				</GridPane>
-				<TextArea fx:id="textArea" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
-					<GridPane.margin>
-						<Insets bottom="20.0" right="20.0" top="20.0"/>
-					</GridPane.margin>
-				</TextArea>
-			</children>
+			</ScrollPane>
+			<Button mnemonicParsing="false" onAction="#onAddInput" text="+" textAlignment="CENTER" GridPane.columnIndex="1">
+				<GridPane.margin>
+					<Insets bottom="10.0" left="10.0" top="10.0"/>
+				</GridPane.margin>
+			</Button>
+			<Button mnemonicParsing="false" onAction="#onRemoveInput" text="-" textAlignment="CENTER" GridPane.columnIndex="3">
+				<GridPane.margin>
+					<Insets bottom="10.0" right="10.0" top="10.0"/>
+				</GridPane.margin>
+			</Button>
 		</GridPane>
-	</children>
+		<GridPane styleClass="pane" GridPane.rowIndex="3">
+			<columnConstraints>
+				<ColumnConstraints/>
+			</columnConstraints>
+			<rowConstraints>
+				<RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+			</rowConstraints>
+			<ScrollPane fitToHeight="true" fitToWidth="true" nodeOrientation="LEFT_TO_RIGHT" vbarPolicy="NEVER" GridPane.vgrow="SOMETIMES">
+				<FlowPane fx:id="outputTape" alignment="CENTER_LEFT" columnHalignment="CENTER" orientation="VERTICAL" prefWrapLength="0.0" GridPane.hgrow="NEVER" GridPane.vgrow="NEVER"/>
+			</ScrollPane>
+		</GridPane>
+		<GridPane GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="3">
+			<columnConstraints>
+				<ColumnConstraints hgrow="ALWAYS"/>
+			</columnConstraints>
+			<rowConstraints>
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+			</rowConstraints>
+			<ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" nodeOrientation="LEFT_TO_RIGHT" GridPane.halignment="RIGHT" GridPane.hgrow="SOMETIMES" GridPane.vgrow="ALWAYS">
+				<padding>
+					<Insets bottom="8.0" left="8.0" right="8.0" top="8.0"/>
+				</padding>
+				<VBox fx:id="registries" alignment="TOP_RIGHT" styleClass="pane">
+					<padding>
+						<Insets right="12.0"/>
+					</padding>
+					<HBox alignment="CENTER" spacing="10.0" VBox.vgrow="NEVER">
+						<padding>
+							<Insets bottom="2.0" left="5.0" right="5.0" top="2.0"/>
+						</padding>
+					</HBox>
+				</VBox>
+			</ScrollPane>
+		</GridPane>
+		<TextArea fx:id="textArea" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+			<GridPane.margin>
+				<Insets bottom="20.0" right="20.0" top="20.0"/>
+			</GridPane.margin>
+		</TextArea>
+	</GridPane>
 </VBox>
